[package]
name = "fsextra"
version = "1.0.0"
description = "A library that provides additional functionality to the filesystem"
authors = ["XXIV"]
homepage = "https://github.com/thechampagne/libfsextra"
repository = "https://github.com/thechampagne/libfsextra"
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fsextra"
crate-type =["cdylib","staticlib"]

[dependencies]
fs_extra = "1.2.0"